# kenlm-jni

./: .travis.yml  README.md  pom.xml
src/main/java/kenlm/: Cleaner.java  CleanerUtil.java  Config.java  FullScoreReturn.java  KenlmJNI.java  LoadMethod.java  Model.java  NativeLibLoader.java  State.java
src/main/native/: CMakeLists.txt  kenlm_KenlmJNI.cpp  kenlm_KenlmJNI.h
src/test/java/kenlm/: ModelTest.java
